[gd_scene load_steps=7 format=3 uid="uid://c4h2sgflxrr34"]

[ext_resource type="Script" uid="uid://c7uiwo6jv52g4" path="res://scenes/raft.gd" id="1_eekkm"]
[ext_resource type="Texture2D" uid="uid://btbj3m3s7echx" path="res://assets/Hana Caraka - Topdown Tileset [sample]/Props/Bridge - wood.png" id="2_sl03k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sl03k"]
size = Vector2(46, 44)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_sl03k"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12u0i"]
size = Vector2(42, 1.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rakhh"]
size = Vector2(1.5, 45)

[node name="Raft" type="Node2D"]
script = ExtResource("1_eekkm")

[node name="Bridge-Wood" type="Sprite2D" parent="."]
position = Vector2(1.1920929e-07, -1.1920929e-07)
scale = Vector2(1.0052083, 1.0156249)
texture = ExtResource("2_sl03k")
region_enabled = true
region_rect = Rect2(0, 0, 48, 48)

[node name="Area2D" type="Area2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_sl03k")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_sl03k")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
sync_to_physics = false

[node name="TopShape" type="CollisionShape2D" parent="AnimatableBody2D"]
unique_name_in_owner = true
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_12u0i")

[node name="BottomShape" type="CollisionShape2D" parent="AnimatableBody2D"]
unique_name_in_owner = true
position = Vector2(0, 22)
shape = SubResource("RectangleShape2D_12u0i")
disabled = true

[node name="LeftShape" type="CollisionShape2D" parent="AnimatableBody2D"]
unique_name_in_owner = true
position = Vector2(-22, 0)
shape = SubResource("RectangleShape2D_rakhh")

[node name="RightShape" type="CollisionShape2D" parent="AnimatableBody2D"]
unique_name_in_owner = true
position = Vector2(22, 0)
shape = SubResource("RectangleShape2D_rakhh")
